Changed appointments confirm route path
